--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -4,7 +4,7 @@
 
 \section{Contexto}
 
-La criptografía es una ciencia que estudia técnicas matemáticas relacionadas con aspectos de seguridad de la información como confidencialidad, integridad de la información, entidades de autenticación y la autenticación de origen de datos entre otras. Esta ciencia tiene como principal objetivo el establecer la comunicación ya sea entre dos personas o dos entidades que requieren compartir información por un canal inseguro el cuál está propenso a un ataque para la manipulación o robo de esta información que viaja en el canal. Es por ello que la criptografía provee de protocolos, algoritmos y demás herramientas que ofrecen una solución para disminuir los ataques no deseados a la información que se requiera compartir de forma segura. 
+La criptografía es una ciencia que estudia técnicas matemáticas relacionadas con aspectos de seguridad de la información como confidencialidad, integridad de la información, entidades de autenticación y la autenticación de origen de datos entre otras. Esta ciencia tiene como principal objetivo el establecer la comunicación ya sea entre dos personas o dos entidades que requieren compartir información por un canal inseguro el cuál está propenso a un ataque para la manipulación o robo de esta información que viaja en el canal. Es por ello que la criptografía provee de protocolos, algoritmos y demás herramientas que ofrecen una solución para disminuir los ataques no deseados a la información que se requiera compartir de forma segura ~\cite{menezes}.
 \\ \\
 Estos protocolos, algoritmos y técnicas de la criptografía pueden ser utilizadas en distintas áreas de investigación o desarrollo, entre ellas esta el \textbf{Cómputo Nube}. La aplicación de la criptografía en los modelos computacionales basados en el cómputo nube tiene como objetivo proporcionar los algoritmos y protocolos criptográficos que den solución a los problemas en el crecimiento de los grandes volúmenes de información que hoy en día se tienen registro en el servicio de almacenamiento en línea \textbf{(Nube)}, basándose en la eliminación de la información que se encuentre con una copia exacta en la nube. Por ejemplo: 
 \\ \\
