--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -133,6 +133,11 @@
 \cfinput{archivosTex/preliminares}
 
 %------------------------------------------------------------------------------------------------------------------------------------
+\chapter{Protocolo Dupless}
+
+\cfinput{archivosTex/protocoloDupless}
+
+%------------------------------------------------------------------------------------------------------------------------------------
 \chapter{Análisis}
 
 \cfinput{archivosTex/analisis}
