--- a/TT-2016-B045/archivosTex/diseño.tex
+++ b/TT-2016-B045/archivosTex/diseño.tex
@@ -45,10 +45,15 @@
 \end{itemize}
 \item \textbf{Software}
 \begin{itemize}
-\item Navegador Web: Chrome 24, Firefox 24, Internet Explorer 10, Safari 7 o superior.
-\begin{itemize}
-\item Soporte para cookies
-\end{itemize}
+\item Visual Paradigm Community Edition 13.2.
+\item ArgoUML 0.34.
+\item Inkscape 0.92.
+\item Python 3.6.1.
+\item Photoshop Online.
+\item LaTeX.
+\item MySQL Community Edition.
+\item MySQL Workbench.
+\item ownCloud.
 \end{itemize}
 
 \item \textbf{Red}
