--- a/TT-2016-B045/archivosTex/GlosarioTerminos.tex
+++ b/TT-2016-B045/archivosTex/GlosarioTerminos.tex
@@ -14,7 +14,7 @@
 \item [Mensaje: ] Información transmitida.
 \item [Algoritmo Criptográfico: ] Es una función matemática usada en los procesos de cifrado y descifrado.Trabaja en combinación con una llave para cifrar y descifrar datos. 
 Modifica los datos de un documento con el objeto de alcanzar algunas características de seguridad (autenticación, integridad y confidencialidad).
-\item [Clave o Llave: ] Código de signos convenidos para la transmisión de mensajes secretos o privados.
+\item [Clave o Llave: ] Una clave es un número de gran tamaño, que una persona puede conceptualizar como un mensaje digital, como un archivo binario o como una cadena de bits o bytes.
 \item [Aritmética Modular: ] Es un sistema aritmético para clases de equivalencia de números enteros llamadas clases de congruencia. 
 \item [Función Computacional: ] Funciones que pueden ser calculadas por una máquina de Turing.
 \item [Opacidad: ] Cualidad de opaco.
