--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -133,6 +133,12 @@
 \cfinput{archivosTex/preliminares}
 
 %------------------------------------------------------------------------------------------------------------------------------------
+
+\chapter{Estado del Arte.}
+
+\cfinput{archivosTex/estado-arte}
+
+%------------------------------------------------------------------------------------------------------------------------------------
 \chapter{Protocolo Dupless}
 
 \cfinput{archivosTex/protocoloDupless}
